MYSQLEXCEL-308 - MYSQL FOR EXCEL - IGNORE DUPLICATES OPTION
- Added new options to the Advanced Append Data Options dialog to choose the behavior for rows containing unique key values that are duplicates of the ones in the rows in the database. (source\Forms\AppendAdvancedOptionsDialog.Designer.cs, source\Forms\AppendAdvancedOptionsDialog.cs, source\Forms\AppendAdvancedOptionsDialog.resx, source\Forms\AppendDataForm.cs, source\Properties\Settings.Designer.cs, source\Properties\Settings.settings, source\app.config)
- Created the AppendDuplicateValuesActionType to match the options added to the Advanced Append Data Options dialog. Added code to the GetPreSqlForAddedRows method to use INSERT IGNORE INTO or REPLACE INTO instead of INSERT INTO for Append Data operations depending on the option selected on the Advanced Append Data Options dialog to handle duplicate values for unique keys. (source\Classes\MySQLDataTable.cs)
- Added new constants for INSERT IGNORE INTO or REPLACE INTO statements. Modified the SqlStatementType method to handle the newly added INSERT IGNORE INTO or REPLACE INTO statements. (source\Classes\MySqlStatement.cs)
- Updated option dialogs to match the new layout done for the Global Options dialog to group options by tabs since adding more options to them was making the forms very large. (source\Forms\AppendAdvancedOptionsDialog.Designer.cs, source\Forms\AppendAdvancedOptionsDialog.resx, source\Forms\ExportAdvancedOptionsDialog.Designer.cs, source\Forms\ExportAdvancedOptionsDialog.resx, source\Forms\ImportAdvancedOptionsDialog.Designer.cs, source\Forms\ImportAdvancedOptionsDialog.resx)
- Updated the tab order of controls. (source\Forms\GlobalOptionsDialog.Designer.cs, source\Forms\GlobalOptionsDialog.resx)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,10 @@
 1.3.7
+- Added new options to the Advanced Append Data Options dialog to choose the behavior for rows containing unique key values that are duplicates of the
+  ones in the rows in the database. The options are "Error out and abort the append operation", which behaves as previous versions of MySQL for Excel where
+  the server returns an error if any duplicate unique key values are found; the second option is "Ignore rows with duplicate unique key values", which
+  causes rows containing duplicate values for unique keys to be ignored or skipped, and only the rows without duplicate values are inserted to the database;
+  the third option is "Replace the values in the old rows with the ones in new rows", which causes rows containing duplicate values for unique keys replace
+  the values of the corresponding rows in the database. (MySQL Bug #83801, Bug #25479653 - MYSQL FOR EXCEL - IGNORE DUPLICATES OPTION)
 - Added support to handle spatial data in MySQL for Excel. Spatial data is handled using corresponding text representations such as Well-Known Text
   (WKT), Keyhole Markup Language (KML), Geography Markup Language (GML) and GeoJSON. The last 3 formats are converted into WKT internally since that is
   the format natively supported by MySQL. A new option was added to the Global Options dialog to select the text format to use to handle spatial data
