MYSQLEXCEL-310 - MYSQL FOR EXCEL EDIT FEATURE ON MULTIPLE COMPUTERS
- Created the WorkbookConnectionInfos class to handle everything related to stored connection information related to Import and Edit Data operations. The class now handles 2 types of storage: the user settings file (as previous versions of the product) and custom XMLparts saved within the Workbook. The storage is automatically chosen by checking if the Workbook supports custom XML parts or not. Functionality to ask the users if they wish to perform an automatic migration of data from the user settings file to custom XML parts has been added, and it is triggered when a Workbook is opened and connection information in the settings file is found. All methods, properties and fields related to connection information was moved from other files to this one. All other classes that accessed connection information were updated to fetch it from this new class. (source\Classes\WorkbookConnectionInfos.cs, source\ThisAddIn.cs, source\Forms\ManageConnectionInfosDialog.Designer.cs, source\Forms\ManageConnectionInfosDialog.cs, source\Forms\ManageConnectionInfosDialog.resx, source\Forms\GlobalOptionsDialog.Designer.cs, source\Forms\GlobalOptionsDialog.cs, source\Forms\GlobalOptionsDialog.resx, source\Forms\EditDataDialog.cs, source\Controls\ExcelAddInPane.cs, source\MySQL.ForExcel.csproj)
- Implemented the IEquatable interface in the EditConnectionInfo and ImportConnectionInfo classes so that checks for inclusion in lists could be done. (source\Classes\EditConnectionInfo.cs, source\Classes\ImportConnectionInfo.cs)
- Added methods to handle custom document properties in Workbooks, and to check if a Workbook supports XML parts. (source\Classes\ExcelUtilities.cs)
- Added methods to handle serialization and deserialization of objects that support serialization. (source\Classes\MiscUtilities.cs)
- Added resource strings for the dialog shown to users to ask for migration of connection information from the users settings fi

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1138,4 +1138,22 @@ Connection will fall back to use a client character set of UTF-8.</value>
   <data name="_null" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\null.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="MoveConnectionsInfoFromSettingsFileToXmlPartsDetail" xml:space="preserve">
+    <value>Connection information can be saved within the Workbook to allow portability (go to See Details to know more).</value>
+  </data>
+  <data name="MoveConnectionsInfoFromSettingsFileToXmlPartsMoreInfo" xml:space="preserve">
+    <value>Connection information used to refresh information of MySQL data imported into Excel tables and used by Edit Data sessions that were open when an Excel Workbook is saved, was stored by MySQL for Excel (in versions lower than 1.3.7) in the user settings file.
+
+This means that as long as the Workbook was opened using the same Windows account and in the same computer when the Workbook was last saved, Excel tables containing MySQL data would be able to refresh their information and Edit Data sessions would be able to be automatically restored, since the connection information would be able to be retrieved from the user settings file. If the Workbook was opened with a different Windows account or moved to a different computer, the data refresh and the restoring of Edit Data sessions was not possible.
+
+Starting with MySQL for Excel 1.3.7, connection information related to imported MySQL data into Excel tables and to Edit Data sessions, can now be stored within the Excel Workbook as XML parts when the Workbook is saved, as long as the Workbook file format supports XML parts. This allows portability of the connection information.
+
+MySQL for Excel will automatically attempt to migrate Import and Edit Data related connection information from the user settings file to the Workbook's XML parts when the Workbook is opened, if the Workbook supports XML parts and connection information related to that Workbook is found in the user settings file.</value>
+  </data>
+  <data name="MoveConnectionsInfoFromSettingsFileToXmlPartsSubDetail" xml:space="preserve">
+    <value>Do you want to proceed with the migration?</value>
+  </data>
+  <data name="MoveConnectionsInfoFromSettingsFileToXmlPartsTitle" xml:space="preserve">
+    <value>Migrate Import/Edit Data connection information</value>
+  </data>
 </root>
