--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,14 @@
 1.3.7
+- Connection information used to refresh information of MySQL data imported into Excel tables and used by Edit Data sessions that were open when an Excel
+  Workbook is saved, was stored by MySQL for Excel (in versions lower than 1.3.7) in the user settings file. This means that as long as the Workbook was
+  opened using the same Windows account and in the same computer when the Workbook was last saved, Excel tables containing MySQL data would be able to
+  refresh their information and Edit Data sessions would be able to be automatically restored. If the Workbook was opened with a different Windows account
+  or moved to a different computer, the data refresh and the restoring of Edit Data sessions was not possible. Starting with MySQL for Excel 1.3.7,
+  connection information related to imported MySQL data into Excel tables and to Edit Data sessions, can now be stored within the Excel Workbook as XML
+  parts when the Workbook is saved, as long as the Workbook file format supports XML parts, otherwise the user settings file is used. This allows
+  portability of the connection information. MySQL for Excel will automatically attempt to migrate Import and Edit Data related connection information
+  from the user settings file to the Workbook's XML parts when the Workbook is opened, if the Workbook supports XML parts and connection information
+  related to that Workbook is found in the user settings file. (MySQL Bug #73314m, Bug #25509085 - MYSQL FOR EXCEL EDIT FEATURE ON MULTIPLE COMPUTERS)
 - Added new options to the Advanced Append Data Options dialog to choose the behavior for rows containing unique key values that are duplicates of the
   ones in the rows in the database. The options are "Error out and abort the append operation", which behaves as previous versions of MySQL for Excel where
   the server returns an error if any duplicate unique key values are found; the second option is "Ignore rows with duplicate unique key values", which
