--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1156,4 +1156,7 @@ MySQL for Excel will automatically attempt to migrate Import and Edit Data relat
   <data name="MoveConnectionsInfoFromSettingsFileToXmlPartsTitle" xml:space="preserve">
     <value>Migrate Import/Edit Data connection information</value>
   </data>
+  <data name="reset" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\reset.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
