Bug #25698025 - MYSQL FOR EXCEL GETS HANGED WHEN CONNECTOR NET IS INSTALLED Bug #25962347 - ERROR OPENING A SCHEMA IN A MYSQL SERVER 8.0 Bug #25962564 - DISABLED SSH CONNECTIONS ARE SELECTABLE BUT DOUBLE-CLICKING THEM FAILS WL10727 - Remove Fabric support
- Updated the MySQL.Utility DLL with the latest version that no longer uses a customized version of the MySqlConnectionStringBuilder class, and ships with the base MySql.Data.dll. (source\libraries\MySQL.Utility.dll)
- Changed the minimum required .NET version from 4 Client Profile to 4.0 Full, since the MySQL Utility now targets .NET 4.0 Full. (Installer\main.wxs, source\app.config, source\MySQL.ForExcel.csproj)
- Removed images and references to Fabric connections. Replaced existing connection images with the ones used in MySQL for Visual Studio for consistency and to show with a different icon all supported connection types including X Protocol ones. (source\Resources\MySQLforExcel-WelcomePanel-Connection-Fabric.png, source\Resources\Connection-X-32x32.png, source\Resources\Connection-Socket-32x32.png, source\Resources\Connection-SSH.png, source\Resources\Connection-TCP-32x32.png, source\MySQL.ForExcel.csproj, source\Properties\Resources.Designer.cs, source\Properties\Resources.resx, source\Panels\WelcomePanel.cs)
- Added code to the WelcomePanel constructor to add to the ImagesList grayscale version of images corresponding to connections not currently supported by MySQL for Excel (SSH and X). Added code to the LoadConnections method to skip loading unknown and Fabric connections. Added code to the AddConnectionToList to assign a different icon and Enabled status to all connection types except for FabricManaged which is Obsolete. (source\Panels\WelcomePanel.cs)
- Changed in the LoadProcedures method, the call to MySqlWorkbenchConnection.GetSchemaInformation to use SchemaInformationType.Routines instead of SchemaInformationType.Procedures just for the sake of using the GetRoutines methid in the MySQL Utility inst

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -268,9 +268,6 @@
   <data name="MySQLforExcel_WelcomePanel_Connection_24x24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MySQLforExcel-WelcomePanel-Connection-24x24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="MySQLforExcel_WelcomePanel_ListItem_Connection_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\MySQLforExcel-WelcomePanel-ListItem-Connection-32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="MySQLforExcel_WelcomePanel_ManageConnection_24x24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MySQLforExcel-WelcomePanel-ManageConnection-24x24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -1007,18 +1004,6 @@ Since Excel relationships cannot be created, a single PivotTable for the whole E
   <data name="ImportDataBindError" xml:space="preserve">
     <value>An error occurred trying to bind MySQL data to Excel table "{0}".</value>
   </data>
-  <data name="MySQLforExcel_WelcomePanel_Connection_Fabric" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\MySQLforExcel-WelcomePanel-Connection-Fabric.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="MySQLforExcel_WelcomePanel_Connection_SSH" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\MySQLforExcel-WelcomePanel-Connection-SSH.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="MySQLforExcel_WelcomePanel_Connection_SSH_Disabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\MySQLforExcel-WelcomePanel-Connection-SSH-Disabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="MySQLforExcel_WelcomePanel_ListItem_Connection_Disabled_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\MySQLforExcel-WelcomePanel-ListItem-Connection-Disabled-32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="ImportDataWillBeTruncatedWarning" xml:space="preserve">
     <value>Importing data will be truncated since it exceeds the available Worksheet's space.</value>
   </data>
@@ -1158,5 +1143,17 @@ MySQL for Excel will automatically attempt to migrate Import and Edit Data relat
   </data>
   <data name="reset" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\reset.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Connection_Socket_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Connection-Socket-32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Connection_SSH" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Connection-SSH.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Connection_TCP_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Connection-TCP-32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Connection_X_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Connection-X-32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
